/* Conjugation */ Perfect triad. <consumere#65608>

--- a/wiki/consumere.wikitext
+++ b/wiki/consumere.wikitext
@@ -78,3 +78,30 @@ c&#333;ns&#363;m&#275;bat : ''he/she/it was using up'' <br>
 c&#333;ns&#363;m&#275;b&#257;mus : ''we were using up'' <br>
 c&#333;ns&#363;m&#275;b&#257;tis : ''you (all) were using up'' <br>
 c&#333;ns&#363;m&#275;bant : ''they were using up'' <br>
+
+=====<u>''Perfect''</u>=====
+c&#333;ns&#363;mps&#299; : ''I used up'' <br>
+c&#333;ns&#363;mpsist&#299; : ''you used up'' <br>
+c&#333;ns&#363;psit : ''he/she/it used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpsimus : ''we used up'' <br>
+c&#333;ns&#363;mpsistis : ''you (all) used up'' <br>
+c&#333;ns&#363;ps&#275;runt : ''they used up'' <br>
+
+=====<u>''Future Perfect''</u>=====
+c&#333;ns&#363;mpser&#333; : ''I will have used up'' <br>
+c&#333;ns&#363;mpseris : ''you will have used up'' <br>
+c&#333;ns&#363;mpserit : ''he/she/it will have used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpserimus : ''we will have used up'' <br>
+c&#333;ns&#363;mpseritis : ''you (all) will have used up'' <br>
+c&#333;ns&#363;mpserint : ''they will have used up'' <br>
+
+=====<u>''Pluperfect''</u>=====
+c&#333;ns&#363;mpseram : ''I had used up'' <br>
+c&#333;ns&#363;mpser&#257;s : ''you had used up'' <br>
+c&#333;ns&#363;mpserat : ''he/she/it had used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpser&#257;mus : ''we had used up'' <br>
+c&#333;ns&#363;mpser&#257;tis : ''you (all) had used up'' <br>
+c&#333;ns&#363;mpserant : ''they had used up'' <br>
