/* Verb */ Conjugation: Present Passive triad. <consumere#65608>

--- a/wiki/consumere.wikitext
+++ b/wiki/consumere.wikitext
@@ -105,3 +105,30 @@ c&#333;ns&#363;mpserat : ''he/she/it had used up'' <br>
 c&#333;ns&#363;mpser&#257;mus : ''we had used up'' <br>
 c&#333;ns&#363;mpser&#257;tis : ''you (all) had used up'' <br>
 c&#333;ns&#363;mpserant : ''they had used up'' <br>
+
+=====<u>''Present Passive''</u>=====
+c&#333;ns&#363;mor : ''I am being used up'' <br>
+c&#333;ns&#363;meris : ''you are being used up'' <br>
+c&#333;ns&#363;mitur : ''he/she/it is being used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mimur : ''we are being used up'' <br>
+c&#333;ns&#363;mimin&#299; : ''you (all) are being used up'' <br>
+c&#333;ns&#363;muntur : ''they are being used up'' <br>
+
+=====<u>''Future Passive''</u>=====
+c&#333;ns&#363;mar : ''I will be used up'' <br>
+c&#333;ns&#363;m&#275;ris : ''you will be used up'' <br>
+c&#333;ns&#363;m&#275;tur : ''he/she/it will be used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;m&#275;mur : ''we will be used up'' <br>
+c&#333;ns&#363;m&#275;min&#299; : ''you (all) will be used up'' <br>
+c&#333;ns&#363;mentur : ''they will be used up'' <br>
+
+=====<u>''Imperfect Passive''</u>=====
+c&#333;ns&#363;m&#275;bar : ''I was being used up'' <br>
+c&#333;ns&#363;m&#275;b&#257;ris : ''you were being used up'' <br>
+c&#333;ns&#363;m&#275;b&#257;tur : ''he/she/it was being used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;m&#275;b&#257;mur : ''we were being used up'' <br>
+c&#333;ns&#363;m&#275;b&#257;min&#299; : ''you (all) were being used up'' <br>
+c&#333;ns&#363;m&#275;bantur : ''they were being used up'' <br>
