--- a/wiki/maintain.wikitext
+++ b/wiki/maintain.wikitext
@@ -1,3 +1,5 @@
 =={{en}}==
 ===Verb===
 # to [[keep up]]; to [[preserve]]
+=== Etymology ===
+Old English maintenen from French 'maintenir', from Latin 'manus tenere' (hand hold).
