/* Conjugation */ Perfect Passive triad. <consumere#65608>

--- a/wiki/consumere.wikitext
+++ b/wiki/consumere.wikitext
@@ -132,3 +132,30 @@ c&#333;ns&#363;m&#275;b&#257;tur : ''he/she/it was being used up'' <br>
 c&#333;ns&#363;m&#275;b&#257;mur : ''we were being used up'' <br>
 c&#333;ns&#363;m&#275;b&#257;min&#299; : ''you (all) were being used up'' <br>
 c&#333;ns&#363;m&#275;bantur : ''they were being used up'' <br>
+
+=====<u>''Perfect Passive''</u>=====
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum sum : ''I have been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum es : ''you have been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum est : ''he/she/it has been used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta sumus : ''we have been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta estis : ''you (all) have been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta sunt : ''they have been used up'' <br>
+
+=====<u>''Future Perfect Passive''</u>=====
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum er&#333; : ''I will have been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum eris : ''you will have been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum erit : ''he/she/it will have been used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta erimus : ''we will have been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta eritis : ''you will have been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta erunt : ''they will have been used up'' <br>
+
+=====<u>''Pluperfect Passive''</u>=====
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum eram : ''I had been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum er&#257;s : ''you had been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum erat : ''he/she/it had been used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta er&#257;mus : ''we had been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta er&#257;tis : ''you (all) had been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta erant : ''they had been used up'' <br>
