/* Conjugation */ Present Subjunctive quartet. <consumere#65608>

--- a/wiki/consumere.wikitext
+++ b/wiki/consumere.wikitext
@@ -159,3 +159,39 @@ c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum erat : ''he/she/it
 c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta er&#257;mus : ''we had been used up'' <br>
 c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta er&#257;tis : ''you (all) had been used up'' <br>
 c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta erant : ''they had been used up'' <br>
+
+=====<u>''Present Subjunctive''</u>=====
+c&#333;ns&#363;mam : ''I may use up'' <br>
+c&#333;ns&#363;m&#257;s : ''you may use up'' <br>
+c&#333;ns&#363;mat : ''he/she/it may use up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;m&#257;mus : ''we may use up'' <br>
+c&#333;ns&#363;m&#257;tis : ''you (all) may use up'' <br>
+c&#333;ns&#363;mant : ''they may use up'' <br>
+
+=====<u>''Imperfect Subjunctive''</u>=====
+c&#333;ns&#363;merem : ''maybe I was using up'' <br>
+c&#333;ns&#363;mer&#275;s : ''maybe you were using up'' <br>
+c&#333;ns&#363;meret : ''maybe he/she/it was using up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mer&#275;mus : ''maybe we were using up'' <br>
+c&#333;ns&#363;mer&#275;tis : ''maybe you (all) were using up'' <br>
+c&#333;ns&#363;merent : ''maybe they were using up'' <br>
+
+=====<u>''Perfect Subjunctive''</u>=====
+c&#333;ns&#363;mpserim : ''I may have used up'' <br>
+c&#333;ns&#363;mpser&#299;s : ''you may have used up'' <br>
+c&#333;ns&#363;mpserit : ''he/she/it may have used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpser&#299;mus : ''we may have used up'' <br>
+c&#333;ns&#363;mpser&#299;tis : ''you (all) may have used up'' <br>
+c&#333;ns&#363;mpserint : ''they may have used up'' <br>
+
+=====<u>''Pluperfect Subjunctive''</u>=====
+c&#333;ns&#363;mpsissem : ''maybe I had used up'' <br>
+c&#333;ns&#363;mpsiss&#275;s : ''maybe you had used up'' <br>
+c&#333;ns&#363;mpsisset : ''maybe he/she/it had used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpsiss&#275;mus : ''maybe we had used up'' <br>
+c&#333;ns&#363;mpsiss&#275;tis : ''maybe you (all) had used up'' <br>
+c&#333;ns&#363;mpsissent : ''maybe they had used up'' <br>
