/* Conjugation */ Present Subjunctive Passive quartet & Imperative. <consumere#65608>

--- a/wiki/consumere.wikitext
+++ b/wiki/consumere.wikitext
@@ -195,3 +195,44 @@ c&#333;ns&#363;mpsisset : ''maybe he/she/it had used up'' <br>
 c&#333;ns&#363;mpsiss&#275;mus : ''maybe we had used up'' <br>
 c&#333;ns&#363;mpsiss&#275;tis : ''maybe you (all) had used up'' <br>
 c&#333;ns&#363;mpsissent : ''maybe they had used up'' <br>
+
+=====<u>''Present Subjunctive Passive''</u>=====
+c&#333;ns&#363;mar : ''I may be being used up'' <br>
+c&#333;ns&#363;m&#257;ris : ''you may be being used up'' <br>
+c&#333;ns&#363;m&#257;tur : ''he/she/it may be being used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;m&#257;mur : ''we may be being used up'' <br>
+c&#333;ns&#363;m&#257;min&#299; : ''you (all) may be being used up'' <br>
+c&#333;ns&#363;mantur : ''they may be being used up'' <br>
+
+=====<u>''Imperfect Subjunctive Passive''</u>=====
+c&#333;ns&#363;merer : ''maybe I was being used up'' <br>
+c&#333;ns&#363;mer&#275;ris : ''maybe you were being used up'' <br>
+c&#333;ns&#363;mer&#275;tur : ''maybe he/she/it was being used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mer&#275;mur : ''maybe we were being used up'' <br>
+c&#333;ns&#363;mer&#275;min&#299; : ''maybe you (all) were being used up'' <br>
+c&#333;ns&#363;merentur : ''maybe they were being used up'' <br>
+
+=====<u>''Perfect Subjunctive Passive''</u>=====
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum sim : ''I may have been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum s&#299;s : ''you may have been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum sit : ''he/she/it may have been used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta s&#299;mus : ''we may have been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta s&#299;tis : ''you (all) may have been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta sint : ''they may have been used up'' <br>
+
+=====<u>''Pluperfect Subjunctive Passive</u>=====
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum essem : ''maybe I had been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum ess&#275;s : ''maybe you had been used up'' <br>
+c&#333;ns&#363;mptus/c&#333;ns&#363;mpta/c&#333;ns&#363;mptum esset : ''maybe he/she/it had been used up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta ess&#275;mus : ''maybe we had been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta ess&#275;tis : ''maybe you (all) had been used up'' <br>
+c&#333;ns&#363;mpt&#299;/c&#333;ns&#363;mptae/c&#333;ns&#363;mpta essent : ''maybe they had been used up'' <br>
+
+=====<u>''Imperative''</u>=====
+(t&#363;) c&#333;ns&#363;me : ''(you) pray use up'' <br>
+:&mdash; <br>
+(v&#333;s) c&#333;ns&#363;mite : ''(you all) pray use up'' <br>
