/* Noun */ added a definition <fungus#38448>

--- a/wiki/fungus.wikitext
+++ b/wiki/fungus.wikitext
@@ -3,6 +3,8 @@
 ===Noun===
 '''fungus''' ([[fungi]]/[[funguses]])
 
+A category of [[eukaryote|eukaryotic]] organism, having [[cell wall]]s but no [[chlorophyll]]. Fungi may be unicellular or multicellular.
+
 ====Related terms====
 *[[fungicidal]]
 *[[fungicide]]
