--- a/wiki/demigod.wikitext
+++ b/wiki/demigod.wikitext
@@ -1,6 +1,6 @@
 ===Noun===
 '''demigod''' (demigods)
-
+#A lesser god, a half-god.
 ====Translations====
 *Chinese: [[半神半人]]
 *French: [[demi-dieu]] ''f''
