/* Noun */ wikify <yeast#4299>

--- a/wiki/yeast.wikitext
+++ b/wiki/yeast.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''yeast''' ([[uncountable]] and [[countable]]; plural: [[yeasts]])
 
-# an often humid, yellowish froth, made of tiny fungi, used in medicine, in baking and in brewing beer.
+# an often humid, yellowish froth, made of tiny [[fungi]], used in medicine, in baking and in brewing beer.
 # a compressed cake of this substance used for mixing with flour to make  bread dough rise.
 # said of mental distress or agitation. <!--this sounds like an adjective-->
 # (''figurative'') a frothy foam on sea waves.
