/* Related words */ <teleomorphic#65609>

--- a/wiki/teleomorphic.wikitext
+++ b/wiki/teleomorphic.wikitext
@@ -5,5 +5,6 @@ A [[fungus]] in a sexually reproducing mode is said to be in a '''teleomorphic''
 
 ===Related words===
 *[[fungus]]
-*[[holomorph]]
+*[[holomorph]]ic
+*[[pleomorph]]ic
 *[[dimorphism]]
