format + cs def <daemon#65600>

--- a/wiki/daemon.wikitext
+++ b/wiki/daemon.wikitext
@@ -1,2 +1,5 @@
-1.British spelling of [[demon]]
-2.(in Greek mythology) a [[deity]].<p>
+==English==
+===Noun===
+#(''Commonwealth'') a [[demon]]
+#(''Greek mythology'') a [[deity]]
+#(''Computer science'') a program running as a background process, performing tasks such as serving files to remote clients.
