--- a/wiki/teleomorphic.wikitext
+++ b/wiki/teleomorphic.wikitext
@@ -1,4 +1,6 @@
-A [[fungus]] in a sexually reproducing mode is said to be in a '''teleomorphic''' state.
+==English==
+==Noun==
+#A [[fungus]] in a sexually reproducing mode is said to be in a '''teleomorphic''' state.
 
 ===[[Antonym]]===
 *[[anamorphic]]
