--- a/wiki/teleomorphic.wikitext
+++ b/wiki/teleomorphic.wikitext
@@ -1,5 +1,5 @@
 ==English==
-==Noun==
+===Noun===
 #A [[fungus]] in a sexually reproducing mode is said to be in a '''teleomorphic''' state.
 
 ===[[Antonym]]===
