--- a/wiki/demarcation.wikitext
+++ b/wiki/demarcation.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''Demarcation'''
 
-# The act of marking off a boundry or setting a limit; a limit; the strict separation of the type of work done by members og different trade unions.
+# The act of marking off a boundry or setting a limit; a limit; the strict separation of the type of work done by members of different trade unions.
 
 
 Swedish: [[avgränsning]]
