Participles & Infinitives. <dubitare#65612>

--- a/wiki/dubitare.wikitext
+++ b/wiki/dubitare.wikitext
@@ -4,3 +4,46 @@
 ===Verb===
 ('''dubit&#333;''', '''dubit&#257;re''', '''dubit&#257;v&#299;''', '''dubit&#257;tum''')
 # To [[doubt]].
+
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+| <big> dubit&#257;ns 
+|
+:&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|
+:&mdash;
+| <big> dubit&#257;tus 
+|-
+!style="background:#D0D0B0;"| ''Future''
+| <big>dubit&#257;t&#363;rus
+| <big> dubitandus
+|}
+
+=====Passive Periphrastic=====
+dubitandus/dubitanda/dubitandum est : ''he/she/it must be doubted''
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+| <big> dubit&#257;re 
+| <big> dubit&#257;r&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+| <big> dubit&#257;visse
+| <big> dubit&#257;tus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+| <big> dubitat&#363;rus esse
+| <big> dubit&#257;tum &#299;r&#299;
+|}
