--- a/wiki/baccalaureate.wikitext
+++ b/wiki/baccalaureate.wikitext
@@ -5,7 +5,7 @@ New Latin ''baccalaureatus'', from Late Latin ''baccalaureus'' a bachelor of art
 
 ===Noun===
 #The [[degree]] of [[bachelor of arts]] the first or lowest academical degree conferred by universities and colleges.
-#([[United States|U.S.) A baccalaureate [[sermon]]. 
+#(''United States'') A baccalaureate [[sermon]]. 
 
 ===Adjective===
 #Pertaining to a bachelor of arts.
