Fix etymology, delete noun form, fix meanings <sesquipedalian#42319>

--- a/wiki/sesquipedalian.wikitext
+++ b/wiki/sesquipedalian.wikitext
@@ -1,17 +1,12 @@
 ===Etymology===
-From '''[[sesqui-]]''', from Latin '''[[sequi]]''', ''follow''?, + '''[[pedal]]''', from Latin '''[[pes]]''', '''[[pedis]]''', ''foot'', + adjective suffix '''[[-alis]]''', + adjective suffix '''[[-ian]]''': cf. F. ''sesquipédal'', L. ''sesquipedalis''.
-
-===Noun===
-'''sesquipedalian'''
-
-#Long word or words
+From '''[[sesqui-]]''', from Latin '''[[sesqui]]''', one and a half, + '''[[pedal]]''', from Latin '''[[pes]]''', '''[[pedis]]''', ''foot'', + adjective suffix '''[[-alis]]''', + adjective suffix '''[[-ian]]''': ''Lit.'' a foot and a half long. cf. F. ''sesquipédal'', L. ''sesquipedalis''.
 
 ===Adjective===
 '''sesquipedalian'''
 
-#Use of superfluously long words
-#Given to the use of overly long words; as a ''sesquipedalian'' writer or speaker.
+#Something that is a foot and a half long e.g. of long words
 #Long in nature and being
+#Given to the use of overly long words; as a ''sesquipedalian'' writer or speaker.
 
 ===Alternate form===
 * [[sesquipedal]]
