--- a/wiki/siamo.wikitext
+++ b/wiki/siamo.wikitext
@@ -1,5 +1,5 @@
 ==Italian==
 ===Verb form===
-'''sono'''
+'''siamo'''
 
 #(''first-person plural present tense of [[essere]]'') (we) [[are]], [[we're]]
