--- a/wiki/%E7%99%BB.wikitext
+++ b/wiki/%E7%99%BB.wikitext
@@ -26,6 +26,39 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': dang1
 
+===Compounds===
+*[[登岸]]
+*[[登报]]
+*[[登鼻子上脸]]
+*[[登场]]
+*[[登程]]
+*[[登第]]
+*[[登峰造极]]
+*[[登高]]
+*[[登高自卑]]
+*[[登机]]
+*[[登基]]
+*[[登极]]
+*[[登记]]
+*[[登科]]
+*[[登临]]
+*[[登龙]]
+*[[登龙门]]
+*[[登录]]
+*[[登陆]]
+*[[登陆场]]
+*[[登陆艇]]
+*[[登门]]
+*[[登攀]]
+*[[登山]]
+*[[登时]]
+*[[登市]]
+*[[登台]]
+*[[登堂入室]]
+*[[登天]]
+*[[登徒子]]
+*[[登载]]
+
 * '''Other info''': 
 
 ----
