--- a/wiki/dubitare.wikitext
+++ b/wiki/dubitare.wikitext
@@ -1,3 +1,16 @@
+==Italian==
+===Verb===
+'''dubitare'''
+
+# to [[doubt]]
+
+===Related terms===
+*[[dubbio]]
+*[[dubitabile]]
+*[[dubitante]]
+*[[dubitativo]]
+
+----
 ==Latin==
 ===Pronunciation===
 *[[AHD]]: <big> d<font style="vertical-align:+11%"><math>\overline{oo}</math></font>-b&#275;-t&#259;&prime; &#259;-r&#277;</big>
