related term <solipsistically#65624>

--- a/wiki/solipsistically.wikitext
+++ b/wiki/solipsistically.wikitext
@@ -5,3 +5,6 @@
 
 # With consideration only for ones own [[interest]]
 #:''Of course, solipsistically, an actor wants to do projects that are good for him.  --William H. Macy, ''Tavist Smiley'', PBS, Nov. 18, 2004
+
+===Related Term===
+*[[Solipsism]]
