--- a/wiki/%E9%99%A8.wikitext
+++ b/wiki/%E9%99%A8.wikitext
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#fall, slip
+*# [[fall]], [[slip]]
 *# let fall
-*# die
+*# [[die]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,6 +34,13 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[隕]]
+
+===Compounds===
+*[[陨落]]
+*[[陨灭]]
+*[[陨石]]
+*[[陨铁]]
+*[[陨星]]
 
 * '''Other info''': 
 
