--- a/wiki/%E7%81%AD.wikitext
+++ b/wiki/%E7%81%AD.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#extinguish
-*# wipe out, exterminate
+*# [[extinguish]]
+*# [[wipe out]], [[exterminate]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,19 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[滅]]
+
+===Compounds===
+*[[灭顶]]
+*[[灭火]]
+*[[灭火弹]]
+*[[灭火器]]
+*[[灭迹]]
+*[[灭绝]]
+*[[灭口]]
+*[[灭门]]
+*[[灭亡]]
+*[[灭种]]
+*[[灭族]]
 
 * '''Other info''': 
 
