/* Usage Note */ <gee#59476>

--- a/wiki/gee.wikitext
+++ b/wiki/gee.wikitext
@@ -19,7 +19,7 @@
 *[[haw]] (2)
 
 ====Usage Note====
-''Gee'', ''gosh'' and ''golly'' are generally considered somewhat dated or juvenile.  They are often used for ironic effect, with the speaker putting on the persona of a freshly-scrubbed freckle-faced kid from days gone by.
+''Gee'', ''gosh'' and ''golly'' are generally considered somewhat dated or juvenile.  They are often used for ironic effect, with the speaker putting on the persona of a freshly-scrubbed freckle-faced kid from days gone by (e.g. 1950 sitcom children, such as Beaver on ''[[w:Leave it to Beaver|Leave it to Beaver]]).
 
 ===Verb=== <!-- I'm assuming that the command is primary and the verb senses are derived -->
 '''gee'''
