--- a/wiki/TMI.wikitext
+++ b/wiki/TMI.wikitext
@@ -9,4 +9,4 @@ From the Internet chat acronym for ''Too much information''.
 '''TMI'''
 # To provide with TMI
 # To provoke embarassment in another by sharing TMI.
-#: ''I thought that discussing my venerial disease would embarass him, but nobody can TMI Joe.''
+#: ''I thought that discussing my favorite sexual position would embarass him, but nobody can TMI Joe.''
