--- a/wiki/hacker.wikitext
+++ b/wiki/hacker.wikitext
@@ -32,7 +32,7 @@
 
 ===Usage Note===
 
-The second sense, dating at least to the 1960's, is still current in the computing community.  However, popular usage, including news accounts and television programs, tends overwhelmingly toward the ''cracker'' sense.  Many in the hacker community (in the first sense) feel it is important to promote usage of the first sense, and find the ''cracker'' sense offensive, particularly since computer burglary and vandalism can be and often are done without any deep understanding or significant skill.  One should, however, use the term with care in casual conversation, as it is easily misconstrued.
+The sense meaning "one who is intensely interested ...", dating at least to the 1960's, is still current in the computing community.  However, popular usage, including news accounts and television programs, tends overwhelmingly toward the ''cracker'' sense.  Many in the hacker community (in the older sense) feel it is important to promote usage of this sense, and find the ''cracker'' sense offensive, particularly since computer burglary and vandalism can be and often are done without any deep understanding or significant skill.  One should, however, use the term with care in casual conversation, as it is easily misconstrued.
 
 ===See Also===
 
