Full article <Judaism#65529>

--- a/wiki/Judaism.wikitext
+++ b/wiki/Judaism.wikitext
@@ -1,1 +1,25 @@
-The [[Jew]]ish religion.
+==English==
+
+===Etymology===
+
+Hebrew ''Yehuda'' (Judah) + [[-ism]]. <!-- Please add native Hebrew spelling -->
+
+===Proper Noun===
+'''Judaism'''
+
+# The [[Jewish]] religion, a [[monotheistic]] religion founded on the [[Torah]] along with other Hebrew writings.
+
+===Related Terms===
+*[[Chassidism]]
+*[[Conservative Judaism]]
+*[[Jew]]
+*[[Jewish]]
+*[[Judaic]]
+*[[Orthodox Judaism]]
+*[[Reconstructionist Judaism]]
+*[[Reform Judaism]]
+
+===See Also===
+*[[Christianity]]
+*[[Islam]]
+*[[monotheism]]
