--- a/wiki/Torah.wikitext
+++ b/wiki/Torah.wikitext
@@ -4,4 +4,13 @@
 
 '''torah'''
 
-#The first five books of the Hebrew Scriptures.
+# The first five books of the Hebrew Scriptures.
+
+===See Also===
+*[[Five Books of Moses]]
+*[[Old Testament]]
+*[[Pentateuch]]
+*[[Talmud]]
+*[[Tanakh]]
+
+*[[w:Torah|Wikipedia article on Torah]]
