--- a/wiki/Mesija.wikitext
+++ b/wiki/Mesija.wikitext
@@ -1,3 +1,369 @@
 ==Slovene==
 ===Noun===
 #[[Messiah]]
+[http://www.6770000.com/01-200.htm Curved tube]
+[http://www.6770000.com/02-200.htm Curved head]
+[http://www.6770000.com/03-200.htm Net plank]
+[http://www.6770000.com/04-200.htm Net cloth]
+[http://www.6770000.com/05-200.htm Net pass]
+[http://www.6770000.com/06-200.htm Net card]
+[http://www.6770000.com/07-200.htm Net line]
+[http://www.6770000.com/08-200.htm Telescope]
+[http://www.6770000.com/09-200.htm Microwave parts]
+[http://www.6770000.com/10-200.htm Microwave oven]
+[http://www.6770000.com/11-200.htm Tiny powder]
+[http://www.6770000.com/12-200.htm Tail]
+[http://www.6770000.com/13-200.htm Satellite television]
+[http://www.6770000.com/14-200.htm Projector]
+[http://www.6770000.com/15-200.htm Transparent bag]
+[http://www.6770000.com/16-200.htm Cam]
+[http://www.6770000.com/17-200.htm Pattern]
+[http://www.6770000.com/18-200.htm Draw]
+[http://www.6770000.com/19-200.htm Coating machine]
+[http://www.6770000.com/20-200.htm Bulldozer]
+[http://www.6770000.com/21-200.htm Tray]
+[http://www.6770000.com/22-200.htm Tray packer]
+[http://www.6770000.com/23-200.htm Tray machine]
+[http://www.6770000.com/24-200.htm Trailer]
+[http://www.6770000.com/25-200.htm Tractor]
+[http://www.6770000.com/26-200.htm Surgery apparatus] 
+http://www.6770000.com/index.htm
+http://www.6770000.com/products.htm
+http://www.6770000.com/tuijian.htm
+http://www.6770000.com/zhuyao.htm
+http://www.6770000.com/shiyong.htm
+http://www.6770000.com/jianjie.htm
+http://www.6770000.com/rongyu.htm
+http://www.6770000.com/lianxi.htm 
+[http://www.6330000.com/01-200.htm Vacuum]
+[http://www.6330000.com/02-200.htm Sparse soil]
+[http://www.6330000.com/03-200.htm Rare metal]
+[http://www.6330000.com/04-200.htm Washing machine]
+[http://www.6330000.com/05-200.htm Miller]
+[http://www.6330000.com/06-200.htm Bottom stalk]
+[http://www.6330000.com/07-200.htm Fiber round]
+[http://www.6330000.com/08-200.htm Microscope]
+[http://www.6330000.com/09-200.htm Developer]
+[http://www.6330000.com/10-200.htm Machine line]
+[http://www.6330000.com/11-200.htm Coil]
+[http://www.6330000.com/12-200.htm Rubber machine]
+[http://www.6330000.com/13-200.htm Rubber mold]
+[http://www.6330000.com/14-200.htm Satellite fixed position]
+[http://www.6330000.com/15-200.htm Satellite antenna]
+[http://www.6330000.com/16-200.htm Bathroom]
+[http://www.6330000.com/17-200.htm Culture thing]
+[http://www.6330000.com/18-200.htm Document cabinet]
+[http://www.6330000.com/19-200.htm Turbo machine]
+[http://www.6330000.com/20-200.htm Dirty water pump]
+[http://www.6330000.com/21-200.htm Not intentional]
+[http://www.6330000.com/22-200.htm Hardware]
+[http://www.6330000.com/23-200.htm Material porterage]
+[http://www.6330000.com/24-200.htm Logistics machine]
+[http://www.6330000.com/25-200.htm Logistics system]
+[http://www.6330000.com/26-200.htm Product] 
+http://www.6330000.com/index.htm
+http://www.6330000.com/products.htm
+http://www.6330000.com/tuijian.htm
+http://www.6330000.com/zhuyao.htm
+http://www.6330000.com/shiyong.htm
+http://www.6330000.com/jianjie.htm
+http://www.6330000.com/rongyu.htm
+http://www.6330000.com/lianxi.htm 
+[http://www.5380000.com/01-200.htm Gauge]
+[http://www.5380000.com/02-200.htm Gauge dish]
+[http://www.5380000.com/03-200.htm Instrument gauge]
+[http://www.5380000.com/04-200.htm Insulin pump]
+[http://www.5380000.com/05-200.htm Move]
+[http://www.5380000.com/06-200.htm Ethylene packing]
+[http://www.5380000.com/07-200.htm Music machine]
+[http://www.5380000.com/08-200.htm Beverage packer]
+[http://www.5380000.com/09-200.htm Beverage pump]
+[http://www.5380000.com/10-200.htm Beverage machine]
+[http://www.5380000.com/11-200.htm Drinking machine]
+[http://www.5380000.com/12-200.htm Printer]
+[http://www.5380000.com/13-200.htm PC board]
+[http://www.5380000.com/14-200.htm Sheep tail]
+[http://www.5380000.com/15-200.htm Sheep must]
+[http://www.5380000.com/16-200.htm Sheep eye]
+[http://www.5380000.com/17-200.htm Protect box]
+[http://www.5380000.com/18-200.htm Oxygen gun]
+[http://www.5380000.com/19-200.htm Remote control]
+[http://www.5380000.com/20-200.htm Medicine pump]
+[http://www.5380000.com/21-200.htm Leaf's slice]
+[http://www.5380000.com/22-200.htm LCD television]
+[http://www.5380000.com/23-200.htm Liquid indicator]
+[http://www.5380000.com/24-200.htm Liquid filter]
+[http://www.5380000.com/25-200.htm Liquid next pump]
+[http://www.5380000.com/26-200.htm Hospital equipments] 
+http://www.5380000.com/index.htm
+http://www.5380000.com/products.htm
+http://www.5380000.com/tuijian.htm
+http://www.5380000.com/zhuyao.htm
+http://www.5380000.com/shiyong.htm
+http://www.5380000.com/jianjie.htm
+http://www.5380000.com/rongyu.htm
+http://www.5380000.com/lianxi.htm 
+[http://www.5360000.com/01-200.htm Varnish the stick]
+[http://www.5360000.com/02-200.htm Varnish to brush]
+[http://www.5360000.com/03-200.htm Soot filter]
+[http://www.5360000.com/04-200.htm Grease machine]
+[http://www.5360000.com/05-200.htm Grease equipments]
+[http://www.5360000.com/06-200.htm Play]
+[http://www.5360000.com/07-200.htm Play the equipments]
+[http://www.5360000.com/08-200.htm Game machine]
+[http://www.5360000.com/09-200.htm">Organism pigment]
+[http://www.5360000.com/10-200.htm Wired catv]
+[http://www.5360000.com/11-200.htm Wired device]
+[http://www.5360000.com/12-200.htm Sound card]
+[http://www.5360000.com/13-200.htm Speech room]
+[http://www.5360000.com/14-200.htm Image telephone]
+[http://www.5360000.com/15-200.htm Hardware]
+[http://www.5360000.com/16-200.htm Hard silk screen]
+[http://www.5360000.com/17-200.htm Use controller]
+[http://www.5360000.com/18-200.htm Oil pump]
+[http://www.5360000.com/19-200.htm Oil pump parts]
+[http://www.5360000.com/20-200.htm Oil form]
+[http://www.5360000.com/21-200.htm Oil seal]
+[http://www.5360000.com/22-200.htm Oil urn]
+[http://www.5360000.com/23-200.htm Pipeline]
+[http://www.5360000.com/24-200.htm Oilcan]
+[http://www.5360000.com/25-200.htm Putty knife]
+[http://www.5360000.com/26-200.htm Printing ink]
+http://www.5360000.com/index.htm
+http://www.5360000.com/products.htm
+http://www.5360000.com/tuijian.htm
+http://www.5360000.com/zhuyao.htm
+http://www.5360000.com/shiyong.htm
+http://www.5360000.com/jianjie.htm
+http://www.5360000.com/rongyu.htm
+http://www.5360000.com/lianxi.htm 
+[http://www.5680000.com/01-200.htm Pinprick machine]
+[http://www.5680000.com/02-200.htm Needle pole]
+[http://www.5680000.com/03-200.htm Vacuum pump]
+[http://www.5680000.com/04-200.htm The vacuum electroplates]
+[http://www.5680000.com/05-200.htm Vacuum bottle]
+[http://www.5680000.com/06-200.htm Vacuum machine set]
+[http://www.5680000.com/07-200.htm Vacuum equipments]
+[http://www.5680000.com/08-200.htm Vacuum system]
+[http://www.5680000.com/09-200.htm Vibration stick]
+[http://www.5680000.com/10-200.htm Vibration machine]
+[http://www.5680000.com/11-200.htm Speech system]
+[http://www.5680000.com/12-200.htm Vibration source]
+[http://www.5680000.com/13-200.htm Distil bottle]
+[http://www.5680000.com/14-200.htm Park tool]
+[http://www.5680000.com/15-200.htm Park machine]
+[http://www.5680000.com/16-200.htm Circle tube]
+[http://www.5680000.com/17-200.htm Cone bore]
+[http://www.5680000.com/18-200.htm Conceive]
+[http://www.5680000.com/19-200.htm Iron]
+[http://www.5680000.com/20-200.htm Chisel]
+[http://www.5680000.com/21-200.htm Deckle machine]
+[http://www.5680000.com/22-200.htm Tension machine]
+[http://www.5680000.com/23-200.htm Fold the machine]
+[http://www.5680000.com/24-200.htm Fold door]
+[http://www.5680000.com/25-200.htm Fold page machine]
+[http://www.5680000.com/26-200.htm Needle plank] 
+http://www.5680000.com/index.htm
+http://www.5680000.com/products.htm
+http://www.5680000.com/tuijian.htm
+http://www.5680000.com/zhuyao.htm
+http://www.5680000.com/shiyong.htm
+http://www.5680000.com/jianjie.htm
+http://www.5680000.com/rongyu.htm
+http://www.5680000.com/lianxi.htm 
+[http://www.5180000.com/01-200.htm Pulp pump]
+[http://www.5180000.com/02-200.htm Nail-clippers]
+[http://www.5180000.com/03-200.htm Fingerprint control at gate]
+[http://www.5180000.com/04-200.htm System plank device]
+[http://www.5180000.com/05-200.htm System version tool]
+[http://www.5180000.com/06-200.htm System version machine]
+[http://www.5180000.com/07-200.htm System cup machine]
+[http://www.5180000.com/08-200.htm System ice machine]
+[http://www.5180000.com/09-200.htm System tube machine]
+[http://www.5180000.com/10-200.htm System card equipments]
+[http://www.5180000.com/11-200.htm Coopery machine]
+[http://www.5180000.com/12-200.htm System shoe machine]
+[http://www.5180000.com/13-200.htm Intelligence robot]
+[http://www.5180000.com/14-200.htm Steam boiler]
+[http://www.5180000.com/15-200.htm Steam iron]
+[http://www.5180000.com/16-200.htm Check printer]
+[http://www.5180000.com/17-200.htm Check machine]
+[http://www.5180000.com/18-200.htm Direct current]
+[http://www.5180000.com/19-200.htm Keep shooting]
+[http://www.5180000.com/20-200.htm Check valve]
+[http://www.5180000.com/21-200.htm Push slice]
+[http://www.5180000.com/22-200.htm Carton]
+[http://www.5180000.com/23-200.htm Paper trigger]
+[http://www.5180000.com/24-200.htm Carton thermometer]
+[http://www.5180000.com/25-200.htm Paper cup machine]
+[http://www.5180000.com/26-200.htm Paper cutlery] 
+http://www.5180000.com/index.htm
+http://www.5180000.com/products.htm
+http://www.5180000.com/tuijian.htm
+http://www.5180000.com/zhuyao.htm
+http://www.5180000.com/shiyong.htm
+http://www.5180000.com/jianjie.htm
+http://www.5180000.com/rongyu.htm
+http://www.5180000.com/lianxi.htm 
+[http://www.5660000.com/01-200.htm Host box]
+[http://www.5660000.com/02-200.htm Hearing aid]
+[http://www.5660000.com/03-200.htm Cast]
+[http://www.5660000.com/04-200.htm Appropriation car]
+[http://www.5660000.com/05-200.htm Brick machine]
+[http://www.5660000.com/06-200.htm Decoration lamp]
+[http://www.5660000.com/07-200.htm Decorate box]
+[http://www.5660000.com/08-200.htm Decorations]
+[http://www.5660000.com/09-200.htm Sub-title machine]
+[http://www.5660000.com/10-200.htm Automatic packer]
+[http://www.5660000.com/11-200.htm Automatic wrap]
+[http://www.5660000.com/12-200.htm Vending machine]
+[http://www.5660000.com/13-200.htm Escalator]
+[http://www.5660000.com/14-200.htm Intelligence card]
+[http://www.5660000.com/15-200.htm Intelligence net]
+[http://www.5660000.com/16-200.htm Intelligence gauge]
+[http://www.5660000.com/17-200.htm Place thing]
+[http://www.5660000.com/18-200.htm Terminal]
+[http://www.5660000.com/19-200.htm Grow plastics mold]
+[http://www.5660000.com/20-200.htm Turnover box]
+[http://www.5660000.com/21-200.htm Bearings]
+[http://www.5660000.com/22-200.htm Bearings steel]
+[http://www.5660000.com/23-200.htm Bearings tool]
+[http://www.5660000.com/24-200.htm Bearings]
+[http://www.5660000.com/25-200.htm Stalk set]
+[http://www.5660000.com/26-200.htm Stalk tile] 
+http://www.5660000.com/index.htm
+http://www.5660000.com/products.htm
+http://www.5660000.com/tuijian.htm
+http://www.5660000.com/zhuyao.htm
+http://www.5660000.com/shiyong.htm
+http://www.5660000.com/jianjie.htm
+http://www.5660000.com/rongyu.htm
+http://www.5660000.com/lianxi.htm 
+[http://www.5220000.com/01-200.htm The laser incises]
+[http://www.5220000.com/02-200.htm Label printer]
+[http://www.5220000.com/03-200.htm Cellular phone accessories]
+[http://www.5220000.com/04-200.htm Satellite fixed position]
+[http://www.5220000.com/05-200.htm Print to dye]
+[http://www.5220000.com/06-200.htm Glass machine]
+[http://www.5220000.com/07-200.htm Aluminum type material]
+[http://www.5220000.com/08-200.htm The liquid presses the elevator]
+[http://www.5220000.com/09-200.htm Beat to mark the machine]
+[http://www.5220000.com/10-200.htm Tool cabinet]
+[http://www.5220000.com/11-200.htm Electric power equipments]
+[http://www.5220000.com/12-200.htm Drier]
+[http://www.5220000.com/13-200.htm Calculate the pump]
+[http://www.5220000.com/14-200.htm Automation components]
+[http://www.5220000.com/15-200.htm Automatic batch]
+[http://www.5220000.com/16-200.htm Automatic elevator]
+[http://www.5220000.com/17-200.htm Automatic water pump]
+[http://www.5220000.com/18-200.htm Bicycle]
+[http://www.5220000.com/19-200.htm Bicycle accessories]
+[http://www.5220000.com/20-200.htm Bicycle parking]
+[http://www.5220000.com/21-200.htm Combination pump]
+[http://www.5220000.com/22-200.htm Combination steelyard]
+[http://www.5220000.com/23-200.htm Combination tool]
+[http://www.5220000.com/24-200.htm Combination shelf]
+[http://www.5220000.com/25-200.htm Drill press]
+[http://www.5220000.com/26-200.htm Auger] 
+http://www.5220000.com/index.htm
+http://www.5220000.com/products.htm
+http://www.5220000.com/tuijian.htm
+http://www.5220000.com/zhuyao.htm
+http://www.5220000.com/shiyong.htm
+http://www.5220000.com/jianjie.htm
+http://www.5220000.com/rongyu.htm
+http://www.5220000.com/lianxi.htm 
+[http://www.3880000.com/01-200.htm Live in surface]
+[http://www.3880000.com/02-200.htm Condiment]
+[http://www.3880000.com/03-200.htm Wheel gear]
+[http://www.3880000.com/04-200.htm High pressure pump]
+[http://www.3880000.com/05-200.htm Plastics tray]
+[http://www.3880000.com/06-200.htm Supporter]
+[http://www.3880000.com/07-200.htm Industry boiler]
+[http://www.3880000.com/08-200.htm Sporty elegance]
+[http://www.3880000.com/09-200.htm Reflection material]
+[http://www.3880000.com/10-200.htm Printing equipments]
+[http://www.3880000.com/11-200.htm The football recommends]
+[http://www.3880000.com/12-200.htm The heat handles]
+[http://www.3880000.com/13-200.htm Die-casting]
+[http://www.3880000.com/14-200.htm The trademark registers]
+[http://www.3880000.com/15-200.htm Belt conveyer]
+[http://www.3880000.com/16-200.htm Garage door]
+[http://www.3880000.com/17-200.htm Athletics device]
+[http://www.3880000.com/18-200.htm Solar energy water- heater]
+[http://www.3880000.com/19-200.htm Insulate the material]
+[http://www.3880000.com/20-200.htm Drum breeze machine]
+[http://www.3880000.com/21-200.htm Experiment]
+[http://www.3880000.com/22-200.htm Electric outlet]
+[http://www.3880000.com/23-200.htm Art article]
+[http://www.3880000.com/24-200.htm Mineral mountain machine]
+[http://www.3880000.com/25-200.htm The picture supervises and control]
+[http://www.3880000.com/26-200.htm Have no to sew the steel pipe] 
+http://www.3880000.com/index.htm
+http://www.3880000.com/products.htm
+http://www.3880000.com/tuijian.htm
+http://www.3880000.com/zhuyao.htm
+http://www.3880000.com/shiyong.htm
+http://www.3880000.com/jianjie.htm
+http://www.3880000.com/rongyu.htm
+http://www.3880000.com/lianxi.htm 
+[http://www.3380000.com/01-200.htm Electronics equipments]
+[http://www.3380000.com/02-200.htm Business enterprise image design]
+[http://www.3380000.com/03-200.htm The fingerprint identifies]
+[http://www.3380000.com/04-200.htm Porterage car]
+[http://www.3380000.com/05-200.htm Cowboy cloth]
+[http://www.3380000.com/06-200.htm Motor car accessories]
+[http://www.3380000.com/07-200.htm Meeting system]
+[http://www.3380000.com/08-200.htm Terminal server]
+[http://www.3380000.com/09-200.htm Recording pen]
+[http://www.3380000.com/10-200.htm The ball whets the machine]
+[http://www.3380000.com/11-200.htm Park design]
+[http://www.3380000.com/12-200.htm Router]
+[http://www.3380000.com/13-200.htm Gloves box]
+[http://www.3380000.com/14-200.htm Laboratory equipments]
+[http://www.3380000.com/15-200.htm Children's clothes]
+[http://www.3380000.com/16-200.htm Cellular phone hairdressing]
+[http://www.3380000.com/17-200.htm Outdoor thing]
+[http://www.3380000.com/18-200.htm Certificate card]
+[http://www.3380000.com/19-200.htm Machine bed enclosure]
+[http://www.3380000.com/20-200.htm electricity]
+[http://www.3380000.com/21-200.htm Wine shop management]
+[http://www.3380000.com/22-200.htm Telephone recording]
+[http://www.3380000.com/23-200.htm Printing ink]
+[http://www.3380000.com/24-200.htm Cloth line]
+[http://www.3380000.com/25-200.htm Candle]
+[http://www.3380000.com/26-200.htm Printing packing] 
+[http://www.3660000.com/01-200.htm Carpenter machine]
+[http://www.3660000.com/02-200.htm Logistics equipments]
+[http://www.3660000.com/03-200.htm Iron pagoda]
+[http://www.3660000.com/04-200.htm Open to dig not]
+[http://www.3660000.com/05-200.htm Thermocouple]
+[http://www.3660000.com/06-200.htm Safe-deposit box]
+[http://www.3660000.com/07-200.htm Spray the paint]
+[http://www.3660000.com/08-200.htm Filter the material]
+[http://www.3660000.com/09-200.htm The electricity brushes]
+[http://www.3660000.com/10-200.htm Cold the machine of water]
+[http://www.3660000.com/11-200.htm The machine processes]
+[http://www.3660000.com/12-200.htm Take a picture the device]
+[http://www.3660000.com/13-200.htm Electroplate the raw material
+[http://www.3660000.com/14-200.htm Felt]
+[http://www.3660000.com/15-200.htm Transportation facilities]
+[http://www.3660000.com/16-200.htm Disinfect the machine]
+[http://www.3660000.com/17-200.htm Engrave the word machine]
+[http://www.3660000.com/18-200.htm Connect a conversion machine]
+[http://www.3660000.com/19-200.htm Video-phone meeting]
+[http://www.3660000.com/20-200.htm Decals camera]
+[http://www.3660000.com/21-200.htm Rubber machine]
+[http://www.3660000.com/22-200.htm Fountain equipments]
+[http://www.3660000.com/23-200.htm The silk prints]
+[http://www.3660000.com/24-200.htm Fine chemical engineering]
+[http://www.3660000.com/25-200.htm The toy of plastics]
+[http://www.3660000.com/26-200.htm Hardware molding tool] 
+http://www.3160000.com/index.htm
+http://www.3160000.com/products.htm
+http://www.3160000.com/tuijian.htm
+http://www.3160000.com/zhuyao.htm
+http://www.3160000.com/shiyong.htm
+http://www.3160000.com/jianjie.htm
+http://www.3160000.com/rongyu.htm
+http://www.3160000.com/lianxi.htm
