/* Noun */ More Judaism 101 <Torah#61033>

--- a/wiki/Torah.wikitext
+++ b/wiki/Torah.wikitext
@@ -1,10 +1,24 @@
 ==English==
 
+===Etymology===
+
+Hebrew for ''law''.
+
+===Proper Noun===
+'''Torah'''
+
+# The first five books of the Hebrew Scriptures, attributed to Moses.
+#: ''Tradition holds that the Torah was handed down to Moses on Mount Sinai.''
+# The full body of written [[Jewish]] law, including the [[Tanakh]], the [[Talmud]], the [[Mishnah]] and the [[midrashic]] texts.
+#: ''It says in the Torah that both gossip and murder cause irreperable damage.''
+# The whole of Jewish law, written and unwritten.
+# The encompassing philosophy of Judaism.
+
 ===Noun===
+'''torah''' <!-- Or is it or can it be capitalized? -->
 
-'''torah'''
-
-# The first five books of the Hebrew Scriptures.
+# A book or scroll containing the five books of Moses.
+#: ''An anonymous donor has provided us with a lovely new torah.''
 
 ===See Also===
 *[[Five Books of Moses]]
